SQOOP-772: OutOfMemory from document generation
(Jarek Jarcec Cecho via Cheolsoo Park)